# face3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile  build-docker-image.bsh  build-face3d-source.bsh  docker-compose.yml  entrypoint.bsh  run-face3d-interactively.bsh
docker/scripts/: build_face3d.bsh
face3d/: CMakeLists.txt  background_renderer.h  camera_estimation.cxx  camera_estimation.h  coeffs_to_pixmap.cxx  coeffs_to_pixmap.h  estimation_results.h  face3d_cuda_context.cxx  face3d_cuda_context.h  head_mesh.cxx  head_mesh.h  localize_points.cu  media_coefficient_from_PNCC_and_offset_estimator.cxx  media_coefficient_from_PNCC_and_offset_estimator.h  media_coefficient_from_PNCC_and_offset_estimator_eos.cxx  media_coefficient_from_PNCC_and_offset_estimator_eos.h  media_coefficient_from_semantic_map_estimator.cxx  media_coefficient_from_semantic_map_estimator.h  media_jitterer.h  mesh_background_renderer.h  mesh_background_renderer_agnostic.h  mesh_io.cxx  mesh_io.h  mesh_renderer.cxx  mesh_renderer.h  novel_view_jitterer.cxx  novel_view_jitterer.h  offset_correction.cxx  offset_correction.h  pncc_renderer.h  pose_jitterer.cxx  pose_jitterer.h  semantic_map.cxx  semantic_map.h  texture_map_operations.cxx  texture_map_operations.h  textured_triangle_mesh.h  triangle_mesh.cxx  triangle_mesh.h
face3d/shaders/: fragment_shader.glsl  fragment_shader_2d.glsl  geometry_shader.glsl  render_to_texture_fragment_shader.glsl  render_to_texture_vertex_shader_ortho.glsl  render_to_texture_vertex_shader_perspective.glsl  vertex_shader_2d.glsl  vertex_shader_ortho.glsl  vertex_shader_perspective.glsl
face3d_basic/: CMakeLists.txt  affine_camera_approximator.h  cmd_line_util.h  dlib_face_detector.cxx  dlib_face_detector.h  dlib_object_detector.cxx  dlib_object_detector.h  face3d_img_util.cxx  face3d_img_util.h  face3d_util.cxx  face3d_util.h  image_conversion.cxx  image_conversion.h  io_utils.cxx  io_utils.h  object_detector.h  ortho_camera_parameters.h  ortho_camera_parameters.txx  perspective_camera_parameters.h  perspective_camera_parameters.txx  sighting_coefficients.h  subject_sighting_coefficients.h
face3d_basic/templates/: ortho_camera_parameters+double-.cxx  perspective_camera_parameters+double-.cxx
face3d_basic/tests/: CMakeLists.txt  test_affine_camera_approximator.cxx  test_numpy_io.cxx
python/: CMakeLists.txt  pybind_util.h  pyface3d.cxx
python/pyface3d/: CMakeLists.txt  pyface3d.cxx
